--- a/templates/Ibrahim Mohamed.html
+++ b/templates/Ibrahim Mohamed.html
@@ -118,19 +118,31 @@
       
       <div>
         <ul class="list">
-          <li>
+          <p >
             ordarawy Market 3-2020 until 6-2021  Software Engineer 
+          </p>
+          <li >
+            - Created RestFull APIS with better performance 
           </li>
-          <li>
+          <li >
+            - Developed service to determine cost for customer based on their locations 
+          </li>
+          <li >
+            - Deployed Projects and take care of security concerns
+          </li>
+          <p>
             On Going 7-2021 until 6-2022  Python Developer 
+          </p>
+          <li >
+            - Developed custom modules to automate HR related tasks 
+            - Deployed Projects and take care of security concerns
           </li>
-          <li>
-            Spectrum 7-2021 until Now  Python Developer 
-          </li>
-          <li>
-            tuft studios 8-2021 until Now  backend Developer (part time)
-          </li>
-
+          <p>
+            Spectrum 6-2022 until Now  Python Developer 
+          </p>
+          - Developed custom modules to automate Accountant related tasks 
+          - Deployed Projects and take care of security concern
+          - Particpate in texhincal desions related to Company Techincal Stack
         </ul>
       </div>
 
