--- a/templates/Ibrahim Mohamed.html
+++ b/templates/Ibrahim Mohamed.html
@@ -122,6 +122,9 @@
             ordarawy Market 3-2020 until 6-2021  Software Engineer 
           </p>
           <li >
+            - do  requirments anylsis
+          </li>
+          <li >
             - Created RestFull APIS with better performance 
           </li>
           <li >
@@ -134,16 +137,30 @@
             On Going 7-2021 until 6-2022  Python Developer 
           </p>
           <li >
-            - Developed custom modules to automate HR related tasks 
-            - Deployed Projects and take care of security concerns
+            - do  requirments anylsis
           </li>
+          <li >
+            - Developed custom modules to automate HR related tasks 
+          </li>
+          <li >
+              - Deployed Projects and take care of security concerns
+            </li>
           <p>
             Spectrum 6-2022 until Now  Python Developer 
           </p>
-          - Developed custom modules to automate Accountant related tasks 
-          - Deployed Projects and take care of security concern
-          - Particpate in texhincal desions related to Company Techincal Stack
-        </ul>
+          <li >
+            - do  requirments anylsis
+          </li>
+          <li >
+            - Developed custom modules to automate Accountant related tasks 
+          </li>
+          <li >
+            - Deployed Projects and take care of security concern
+        </li>
+        <li >
+          - Particpate in techincal desions related to Company Techincal Stack
+      </li>
+    </ul>
       </div>
 
       <h2>Some of the work I was a member of:</h2>
