--- a/templates/Ibrahim Mohamed.html
+++ b/templates/Ibrahim Mohamed.html
@@ -111,7 +111,7 @@
       
       <h2>Professional Summary:</h2> 
       <p>
-        I am a software engineer, I am frameworks and technology independent, I keep my skills updated and learning Modern technologies,  with experience in backend development and basics of front end.
+        I am a software engineer, I am frameworks and technology independent, I keep my skills updated and learn Modern technologies,  with experience in backend development and basics of the front end.
       </p>
       
       <h2>Work Experience:</h2>
@@ -121,45 +121,14 @@
           <p >
             ordarawy Market 3-2020 until 6-2021  Software Engineer 
           </p>
-          <li >
-            - do  requirments anylsis
-          </li>
-          <li >
-            - Created RestFull APIS with better performance 
-          </li>
-          <li >
-            - Developed service to determine cost for customer based on their locations 
-          </li>
-          <li >
-            - Deployed Projects and take care of security concerns
-          </li>
           <p>
             On Going 7-2021 until 6-2022  Python Developer 
           </p>
-          <li >
-            - do  requirments anylsis
-          </li>
-          <li >
-            - Developed custom modules to automate HR related tasks 
-          </li>
-          <li >
-              - Deployed Projects and take care of security concerns
-            </li>
           <p>
             Spectrum 6-2022 until Now  Python Developer 
           </p>
-          <li >
-            - do  requirments anylsis
-          </li>
-          <li >
-            - Developed custom modules to automate Accountant related tasks 
-          </li>
-          <li >
-            - Deployed Projects and take care of security concern
-        </li>
-        <li >
-          - Particpate in techincal desions related to Company Techincal Stack
-      </li>
+  
+        
     </ul>
       </div>
 
@@ -176,12 +145,20 @@
       </div>
 
       <p>
+        <li >
+          do requirements analysis
+        </li>
+        <li >
+          Created RestFull APIS with better performance 
+        </li>
+        <li >
+         Developed service to determine the cost for customers based on their locations 
+        </li>
         <li>
         create a service to check whether user address in the available zone we define
         use Postgres to retrieve data from the database to overcome the slow response of data retrieved from odoo 
       </li>
       <li>
-
         combine data retrieved from Postgres and odoo and serialize this data to be used with flutter
       </li>
       <li>
@@ -212,17 +189,52 @@
         <li>bootstrab</li>
       </ul>
       
-
-      <h3 class="work">ERP System</h3>
       <div class="links">
-        <a href="https://etfe.odoo.com/web#cids=1&action=menu">
-          tbs
+        <a href="https://ongoing-co.com/">
+          ongoing
         </a>
       </div>
       <p>
-        create a custom modules 
-        - to create  finatial reports for
-        - to calucaluate salary any taxes of the company 
+        <li >
+         do  requirments anylsis
+        </li>
+        <li >
+        Developed custom modules to automate HR-related  tasks 
+        </li>
+        <li >
+          Deployed Projects and take care of security concerns
+        </li>
+      </p>
+      <h3>Technology I used:</h3>
+      <ul class="list inline">
+        <li>XML</li>
+        <li>Odoo</li>
+        <li>bootstrab</li>
+        <li>Git</li>
+      </ul>
+
+
+      <div class="links">
+        <a href="https://sys-spectrum.com/">
+          Spectrum
+        </a>
+      </div>
+      <p>
+        <li >
+          do  requirments anylsis
+        </li>
+        <li >
+         Developed custom modules to automate Accountant related tasks 
+        </li>
+        <li >
+          create finatial reports 
+          <li >
+            Deployed Projects and take care of security concerns
+          </li>
+        </li>
+        <li >
+          Participate in technical decisions related to Company's Techincal Stack
+      </li>
       </p>
       <h3>Technology I used:</h3>
       <ul class="list inline">
