--- a/templates/Ibrahim Mohamed.html
+++ b/templates/Ibrahim Mohamed.html
@@ -249,11 +249,11 @@
         hadn't been release yet
       </div>
       <li>
-        participate with the business team on which approaches it would be better for us to follow
+        participate with the business team
       </li>
       <li>
       
-        custom authentication: create custom OTP that allows only verified users to use the application 
+        custom authentication: create a custom OTP that allows only verified users to use the application 
         </li>
         <li>
           cart: handle calculating products in cart prices and quantities and order total value   
@@ -265,10 +265,10 @@
             canceling an order: update products quantities and update user wallet if it was used 
             </li>
             <li>
-              send real-time notifications when order is created successfully
+              send real-time notifications when an order is created successfully
               </li>
               <li>
-                  particpate in deployment process on aws 
+                participate in the deployment process on AWS 
                 </li>
       
       <h3>Technology I used:</h3>
@@ -304,7 +304,7 @@
 
         <p>
           a simple classroom project to practice using Django Rest Framework 
-          and testing using django Test Case and Pytest
+          and testing using Django Test Case and Pytest
         </p>
         
         <a href="https://github.com/himarajab/pycasts">
@@ -356,7 +356,7 @@
 
 
       <h3 class="work">Education:</h3>
-      <p>Bacholere degree in information technology </p>
+      <p>Bachelor degree in information technology </p>
 
       <h3 class="work">Miltary Service :</h3>
       <p>Finished </p> 
