--- a/templates/Ibrahim Mohamed.html
+++ b/templates/Ibrahim Mohamed.html
@@ -118,21 +118,90 @@
       
       <div>
         <ul class="list">
-          <p >
-            ordarawy Market 3-2020 until 6-2021  Software Engineer 
-          </p>
-          <p>
-            On Going 7-2021 until 6-2022  Python Developer 
-          </p>
-          <p>
-            Spectrum 6-2022 until Now  Python Developer 
-          </p>
+          <h3>Theaccounter - Backend Developer</h3>
+          <p>5-2023 - Present</p>
+          <ul>
+            <li>Developed and customized modules to meet business requirements.</li>
+            <li>Enhanced the infrastructure and ensured security compliance.</li>
+            <li>Participated in technical decisions related to the company's tech stack.</li>
+          </ul>
+
+          <h3>Spectrum - Python Developer</h3>
+          <p>6-2022 - 5-2023</p>
+          <ul>
+            <li>Conducted requirements analysis and developed custom modules.</li>
+            <li>Created financial reports and deployed projects with a focus on security.</li>
+            <li>Participated in technical decisions for the company's tech stack.</li>
+          </ul>
+          
+          <h3>On Going - Python Developer</h3>
+          <p>7-2021 - 6-2022</p>
+          <ul>
+            <li>Performed requirements analysis and developed HR automation modules.</li>
+            <li>Deployed projects and addressed security concerns.</li>
+          </ul>
+          
+          <h3>Ordarawy Market - Software Engineer</h3>
+          <p>3-2020 - 6-2021</p>
+          <ul>
+            <li>Conducted requirements analysis and created high-performance RESTful APIs.</li>
+            <li>Developed a service to determine costs based on customer locations.</li>
+            <li>Integrated data from PostgreSQL and Odoo for use with Flutter.</li>
+            <li>Deployed projects on VPS using Nginx.</li>
+          </ul>
+        </div>
   
         
     </ul>
       </div>
 
       <h2>Some of the work I was a member of:</h2>
+
+      <div class="links">
+        <a href="https://www.theaccounter.com//">
+          Theaccounter
+        </a>
+      </div>
+      <h3>Technologies I used:</h3>
+      <ul >
+        <li>XML</li>
+        <li>Odoo</li>
+        <li>Django</li>
+        <li>Git</li>
+        <li>AWS</li>
+        <li>Docker</li>
+      </ul>
+
+
+      <div class="links">
+        <a href="https://sys-spectrum.com/">
+          Spectrum
+        </a>
+      </div>
+      <h3>Technologies I used:</h3>
+      <ul >
+        <li>XML</li>
+        <li>Odoo</li>
+        <li>Bootstrap</li>
+        <li>Git</li>
+      </ul>
+
+
+      <div class="links">
+        <a href="https://ongoing-co.com/">
+          ongoing
+        </a>
+      </div>
+      <h3>Technologies I used:</h3>
+      <ul >
+        <li>XML</li>
+        <li>Odoo</li>
+        <li>Bootstrap</li>
+        <li>Git</li>
+      </ul>
+
+
+
 
       <h3 class="work">Ordarawy Market</h3>
       <div class="links">
@@ -144,29 +213,8 @@
         </a>
       </div>
 
-      <p>
-        <li >
-          do requirements analysis
-        </li>
-        <li >
-          Created RestFull APIS with better performance 
-        </li>
-        <li >
-         Developed service to determine the cost for customers based on their locations 
-        </li>
-        <li>
-        create a service to check whether user address in the available zone we define
-        use Postgres to retrieve data from the database to overcome the slow response of data retrieved from odoo 
-      </li>
-      <li>
-        combine data retrieved from Postgres and odoo and serialize this data to be used with flutter
-      </li>
-      <li>
-        deploy the project with Nginx on VPS
-      </li>
-    </p>
-      <h3>Technology I used:</h3>
-      <ul class="list inline">
+      <h3>Technologies I used:</h3>
+      <ul >
         <li>Python3 </li>
         <li>Odoo </li>
         <li>Fast API</li>
@@ -181,78 +229,28 @@
       <p>
         an inventory management system that handles products quantities and prices calculation and order status according to delivery 
       </p>
-      <h3>Technology I used:</h3>
-      <ul class="list inline">
+      <h3>Technologies I used:</h3>
+      <ul >
         <li>Django</li>
         <li>Java script</li>
         <li>Odoo</li>
-        <li>bootstrab</li>
+        <li>Bootstrap</li>
       </ul>
       
-      <div class="links">
-        <a href="https://ongoing-co.com/">
-          ongoing
-        </a>
-      </div>
-      <p>
-        <li >
-         do  requirments anylsis
-        </li>
-        <li >
-        Developed custom modules to automate HR-related  tasks 
-        </li>
-        <li >
-          Deployed Projects and take care of security concerns
-        </li>
-      </p>
-      <h3>Technology I used:</h3>
-      <ul class="list inline">
-        <li>XML</li>
-        <li>Odoo</li>
-        <li>bootstrab</li>
-        <li>Git</li>
-      </ul>
+      
 
 
-      <div class="links">
-        <a href="https://sys-spectrum.com/">
-          Spectrum
-        </a>
-      </div>
-      <p>
-        <li >
-          do  requirments anylsis
-        </li>
-        <li >
-         Developed custom modules to automate Accountant related tasks 
-        </li>
-        <li >
-          create finatial reports 
-          <li >
-            Deployed Projects and take care of security concerns
-          </li>
-        </li>
-        <li >
-          Participate in technical decisions related to Company's Techincal Stack
-      </li>
-      </p>
-      <h3>Technology I used:</h3>
-      <ul class="list inline">
-        <li>XML</li>
-        <li>Odoo</li>
-        <li>bootstrab</li>
-        <li>Git</li>
-      </ul>
+      
 
+
+      
+
+      
+     
+
+      <h3 class="work">Some open-source projects</h3>
       <h3 class="work">e-commerce application</h3>
-      <div class="links">
-        hadn't been release yet
-      </div>
       <li>
-        participate with the business team
-      </li>
-      <li>
-      
         custom authentication: create a custom OTP that allows only verified users to use the application 
         </li>
         <li>
@@ -267,12 +265,8 @@
             <li>
               send real-time notifications when an order is created successfully
               </li>
-              <li>
-                participate in the deployment process on AWS 
-                </li>
-      
-      <h3>Technology I used:</h3>
-      <ul class="list inline">
+      <h3>Technologies I used:</h3>
+      <ul >
         <li>Python</li>
         <li>Django Rest Framework</li>
         <li>Postgresql</li>
@@ -281,21 +275,6 @@
         <li>Git</li>
         <li>trello</li>
       </ul>
-      
-     
-
-      <h3 class="work">Some open-source projects</h3>
-      
-      <div class="links inline">
-
-        
-        <a href="https://github.com/himarajab/my-blog">
-          Blog
-        </a>
-        
-        <p>
-          Blog in django and integrate with it javascript and pytest 
-        </p>
 
 
         <a href="https://github.com/himarajab/pytest-django">
@@ -322,20 +301,21 @@
       <h3 class="work">proficiency SKills</h3>
       
       <h5>Skill Level: Professional</h5>
-      <ul class="list inline">
+      <ul >
         <li>Python</li>
         <li>Django</li>
         <li>Odoo</li>
         <li>API development</li>
         <li>Django Rest Framework</li>
-        <li>communication,effective listening and a strong collaborative attitude.</li>
+        <li>Effective communication and collaboration</li>
       </ul>
       
       <h5>Skill Level: Intermediate</h5>
-      <ul class="list inline">
+      <ul >
         <li>Nginx</li>
+        <li>AWS</li>
         <li>Postgresql</li>
-        <li>Mysql</li>
+        <li>XML</li>
         <li>Ability to document technical processes to promote bi-directional knowledge transfer within a team environment.</li>
         <li>TDD(Pytest,factory boy)</li>
         <li>Linux Server</li>
@@ -345,12 +325,11 @@
       </ul>
       
       <h5>Skill Level: basics</h5>
-      <ul class="list inline">
-        <li>Bootstrab4</li>
+      <ul >
+        <li>Bootstrap4</li>
         <li>docker</li>
         <li>Firebase</li>
         <li>Celery</li>
-        <li>XML</li>
         <li>Java Script (React)</li>
       </ul>
 
@@ -361,8 +340,8 @@
       <h3 class="work">Miltary Service :</h3>
       <p>Finished </p> 
 
-      <h3 class="work">Languages</h3>
-      <ul class="list inline">
+      <h2>Languages</h2>
+      <ul>
         <li>Arabic: Native</li>
         <li>English: Upper intermediate</li>
       </ul>
