enhance the resume

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
 					<h4>TOP EXPERTISE</h4>
 
-					<p>Fullstack developer with primary focus on Python + JavaScript: <a target="_blank" href="{% static 'Ibrahim Mohamed.pdf' %}">Download Resume</a></p>
+					<p>Backend Developer with primary focus on Python + JavaScript: <a target="_blank" href="{% static 'Ibrahim Mohamed.pdf' %}">Download Resume</a></p>
 
 					
 
