--- a/templates/Ibrahim Mohamed.html
+++ b/templates/Ibrahim Mohamed.html
@@ -121,16 +121,17 @@
           <h3>Theaccounter - Backend Developer</h3>
           <p>5-2023 - Present</p>
           <ul>
-            <li>Developed and customized modules to meet business requirements.</li>
-            <li>Enhanced the infrastructure and ensured security compliance.</li>
+            <li>refactor codebase performance and maintainability.</li>
+            <li>Developed and customized modules to meet business requirements via integrating odoo APIS with external APIS.</li>
+            <li>Enhanced the infrastructure and ensured security compliance and better performance result.</li>
             <li>Participated in technical decisions related to the company's tech stack.</li>
           </ul>
 
           <h3>Spectrum - Python Developer</h3>
           <p>6-2022 - 5-2023</p>
           <ul>
-            <li>Conducted requirements analysis and developed custom modules.</li>
-            <li>Created financial reports and deployed projects with a focus on security.</li>
+            <li>Conducted requirements analysis and developed custom modules to meet business requirements.</li>
+            <li>Created financial reports and deployed projects with on VPS and odoo SH</li>
             <li>Participated in technical decisions for the company's tech stack.</li>
           </ul>
           
