style: add print-specific styles and update contact email in portfolio template

--- a/templates/Ibrahim Mohamed.html
+++ b/templates/Ibrahim Mohamed.html
@@ -75,6 +75,14 @@
       a:hover {
         color: #1e88e5;
       }
+      
+      /* PDF-specific styles */
+      @media print {
+        .header a {
+          color: #1565c0 !important;
+          text-decoration: underline !important;
+        }
+      }
     </style>
     <title>Ibrahim Mohamed - Portfolio</title>
   </head>
@@ -82,7 +90,7 @@
     <div class="header">
       <h2>Ibrahim Mohamed</h2>
       <h3>Versatile Software Engineer</h3>
-      <h3>Email: <a href="mailto:irarajab@yandex.com">irarajab@yandex.com</a></h3>
+      <h3>Email: <a href="mailto:rajabhima2@gmail.com">rajabhima2@gmail.com</a></h3>
       <h3>LinkedIn: <a href="https://www.linkedin.com/in/ibrahim-mohamed-581b39167/">Ibrahim Mohamed</a></h3>
       <h3>GitHub: <a href="https://github.com/himarajab">github.com/himarajab</a></h3>
       <h3>Portfolio: <a href="http://imohamed.pythonanywhere.com/">imohamed.pythonanywhere.com</a></h3>
